--- a/m-auto-menu-swap.css
+++ b/m-auto-menu-swap.css
@@ -1,7 +1,1 @@
-.swap_header_footer {
-	padding:0!important;
-	margin:0!important;
-	bottom:0!important;
-	top:auto!important;
-	z-index:998!important
-} 
+.swap_header_footer{padding:0!important;margin:0!important;bottom:0!important;top:auto!important;z-index:998!important}
